trying to fix vertical space on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -13,15 +13,15 @@
 html{
   width: 100%;
   overflow-x: hidden;
+  min-height: -webkit-fill-available;
 }
 
 body {
   min-width: 100vw;
+  min-height: -webkit-fill-available;
 
   font-family: "Helvetica", "Arial", sans-serif;
   color: #333;
-
-  /* background-color: orange; */
 }
 
 main{
